[project]
name = "simli-pipecat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "loguru>=0.7.3",
    "pipecat-ai[cartesia,deepgram,groq,openai,runner,simli,webrtc]>=0.0.106",
    "uvicorn>=0.42.0",
]
